Fix broken UI after setting min height

--- a/src/sass/app/metatrader.scss
+++ b/src/sass/app/metatrader.scss
@@ -256,7 +256,6 @@
         }
     }
     #account_details {
-        flex: 0;
         position: relative;
         min-height: 100px;
 
